# blink

./: LICENSE  README.md
client/: .editorconfig  .eslintrc.json  .gitignore  copy-static.sh  index.html  main.js  out.txt  package-lock.json  package.json  preload.js  renderer.js  style.css  tsconfig.json
client/lsp-editor-adapter/src/: tcp-connection.ts
client/samples/: nougat.py  sample.py
client/samples/modules/: .tags  game.py  player.py  util.py  world.py
client/src/: Context.ts  Project.ts  client-capabilities.ts  codemirror-adapter.ts  codemirror-lsp.css  dialog.js  index.html  langserver-client.ts  langserver-start.ts  main.ts  nav-object.ts  out.txt  preload.ts  renderer-types.ts  renderer.ts  search.js  searchcursor.js  server-manager.ts  style.css
client/src/codemirror-addon/: search.ts
client2/: .eslintrc.json  package-lock.json  package.json  tsconfig.json
client2/src/: index.html  langserver-client.ts  langserver-start.ts  main.ts  preload.ts  renderer.ts
nav-object-test/: nav-object.ts  package-lock.json  package.json  tsconfig.json
server/: Pipfile  example.py  main.py  pyproject.toml  start.sh
server/python-language-server/: appveyor.yml  setup.py
server/python-language-server/.circleci/: config.yml
server/python-language-server/pyls/: hookspecs.py  python_ls.py  uris.py  workspace.py
server/python-language-server/pyls/plugins/: ctags.py  rope_rename.py  symbols.py  used_symbols.py
server/python-language-server/vscode-client/: package.json
